@@ -67,8 +67,8 @@ DEFINE_PER_THREAD_MALLOCED_DATA(char *, subprogram_name);
 /* --version option output. */
 static char *program_version;
 
-/* 'true' if mlockall() succeeded. */
-static bool is_memory_locked = false;
+/* 'true' if mlockall() succeeded, but doesn't support ONFAULT. */
+static bool is_all_memory_locked = false;
 
 /* Buffer used by ovs_strerror() and ovs_format_message(). */
 DEFINE_STATIC_PER_THREAD_DATA(struct { char s[128]; },
@@ -102,15 +102,15 @@ ovs_assert_failure(const char *where, const char *function,
 }
 
 void
-set_memory_locked(void)
+set_all_memory_locked(void)
 {
-    is_memory_locked = true;
+    is_all_memory_locked = true;
 }
 
 bool
-memory_locked(void)
+memory_all_locked(void)
 {
-    return is_memory_locked;
+    return is_all_memory_locked;
 }
 
 void
